# frogalert

./: .gitignore  AGENTS.md  CNAME  Cargo.toml  FEATURES.md  LICENSE  MEMORY.md  Makefile  README.md  SKILLS.md  index.html  package.json
.github/workflows/: ci.yml  pages.yml
agent-memory/logs/: 2026-07-17-project-foundation.md  2026-07-18-recovery-and-count-prototype.md  2026-07-21-guided-web-flasher.md  2026-07-22-badgemagic-animation-stride.md  2026-07-22-blank-rust-image-lessons.md  2026-07-22-fossasia-passive-survey.md  2026-07-22-fossasia-usbc-base.md  2026-07-22-recoverable-lab-image.md  2026-07-22-usbc-hardware-smoke.md  2026-07-23-candidate-release-and-entry-guide.md  2026-07-23-commit-release-pipeline.md  2026-07-23-karr-detection-rule.md  2026-07-23-latest-survey-observation.md
agent-memory/notes/: browser-flashing.md  display-recovery-and-count.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  HARDWARE.md  PROTOCOL.md  RELEASE.md  THIRD_PARTY.md  UPSTREAM.md  WEB_FLASHING.md
firmware/: Cargo.toml  quarantine.json  rust-toolchain.toml
firmware/frogalert-count/: Cargo.toml
firmware/frogalert-count/src/: main.rs
firmware/frogalert-display/: Cargo.toml
firmware/frogalert-display/src/: lib.rs
firmware/frogalert-pixel-walk/: Cargo.toml
firmware/frogalert-pixel-walk/src/: main.rs
flash/: index.html
scripts/: apply-fossasia-survey.mjs  assemble-site.mjs  audit-ch58x-vectors.mjs  audit-fossasia-usbc.mjs  build-count-firmware  build-display-bringup  build-fossasia-usbc  finalize-firmware.mjs  firmware-candidate.mjs  firmware-image.mjs  firmware-publication.mjs  firmware-release-plan.mjs  prepare-fossasia-usbc  publish-github-releases.mjs  run-rust-toolchain  serve-site  verify
site/: app.js  firmware-quarantine.js  flash-session.js  flash-support.js  flash.css  flasher-state.js  isp-entry-guide.js  styles.css  wchisp-protocol.js
tests/: ch58x-vector-audit.test.mjs  firmware-candidate-workflow.test.mjs  firmware-candidate.test.mjs  firmware-image.test.mjs  firmware-publication.test.mjs  firmware-quarantine.test.mjs  firmware-release-automation.test.mjs  flash-session.test.mjs  flash-support.test.mjs  flasher-state.test.mjs  fossasia-animation-compat.c  fossasia-survey-core.c  fossasia-survey.test.mjs  fossasia-usbc.test.mjs  isp-entry-guide.test.mjs  site-structure.test.mjs  wchisp-protocol.test.mjs
(+30 files in other folders)
